<resources>
    <string name="app_name">CustomScroll</string>
    <string name="add">ADD</string>
    <string name="submit">Submit</string>
    <string name="mobile">Mobile</string>
    <string name="title">FUEL INJECTION PUMP</string>
    <string name="back">BACK</string>
    <string name="unit_price">Unit Price : </string>
    <string name="available_stock">AVAILABLE STOCK</string>
    <string name="warehouse">Warehouse North</string>
    <string name="num_500">500</string>
    <string name="quantity">Quantity</string>
    <string name="total_price">Total Price : </string>
    <string name="num_3000">$3000</string>
    <string name="_02">02</string>
</resources>
